--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
+  hydrated_bloc: ^9.0.0
   provider: ^6.0.5
 
 dev_dependencies:
